# meganote

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_text_file.txt
src/: llm_utils.py  meta.py  obsidian.py  supernote.py  sync.py  text_extraction.py  utilities.py  watch.py
