[project]
name = "meganote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ijson>=3.3.0",
    "llm>=0.23",
    "llm-anthropic>=0.15.1",
    "llm-claude-code-plugin==0.1.3",
    "llm-gemini>=0.16",
    "llm-groq>=0.8",
    "llm-mistral>=0.11.1",
    "llm-ollama>=0.9.1",
    "llm-openrouter>=0.4.1",
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "supernotelib>=0.6.2",
]
